--- a/index.html
+++ b/index.html
@@ -27,6 +27,19 @@
             padding: 2rem 1rem;
             text-align: center;
         }
+        
+        /* Logo styles */
+        .logo-container {
+            display: flex;
+            justify-content: center;
+            margin: 0 auto 1.5rem auto;
+            max-width: 500px;
+        }
+        
+        .logo {
+            width: 100%;
+            height: auto;
+        }
 
         .hero {
             background: var(--accent-color);
@@ -103,6 +116,10 @@
 <body>
     <header>
         <div class="container">
+            <!-- Added logo with the correct file name -->
+            <div class="logo-container">
+                <img src="images/Logo TDW.png" alt="Tallinn Data Week 25 Logo" class="logo">
+            </div>
             <h1>Tallinn Data Week 2025</h1>
             <p>September 2025 • Tallinn, Estonia</p>
         </div>
