--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
                 <img src="images/Logo TDW.png" alt="Tallinn Data Week 25 Logo" class="logo">
             </div>
             <h1>Tallinn Data Week 2025</h1>
-            <p>September 2025 • Tallinn, Estonia</p>
         </div>
     </header>
     
@@ -37,12 +36,6 @@
         <div class="container">
             <h2>How to improve the lives of people working with data</h2>
             <p>When people are doing well, results follow</p>
-            <a href="https://www.linkedin.com/company/tallinn-data-week/about/?viewAsMember=true" class="linkedin-button">
-                <svg style="width:24px;height:24px;margin-right:8px;vertical-align:middle" viewBox="0 0 24 24" fill="currentColor">
-                    <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
-                </svg>
-                Follow on LinkedIn
-            </a>
         </div>
     </div>
 
@@ -123,7 +116,7 @@
                 <div class="sponsor-card sponsor-event">
                     <div class="sponsor-badge">Premium</div>
                     <h4>Event Sponsor</h4>
-                    <div class="sponsor-price">€10,000</div>
+                    <div class="sponsor-price">€7,500</div>
                     <ul class="sponsor-benefits">
                         <li><span class="benefit-check">✓</span> Dedicated slot during the week</li>
                         <li><span class="benefit-check">✓</span> Slot during opening day (keynote)</li>
@@ -139,7 +132,7 @@
                 <div class="sponsor-card sponsor-gold">
                     <div class="sponsor-badge">Gold</div>
                     <h4>Golden Sponsor</h4>
-                    <div class="sponsor-price">€7,500</div>
+                    <div class="sponsor-price">€4,500</div>
                     <ul class="sponsor-benefits">
                         <li><span class="benefit-check">✓</span> Keynote speaker to sub-event</li>
                         <li><span class="benefit-check">✓</span> Dedicated sub-event</li>
@@ -154,7 +147,7 @@
                 <div class="sponsor-card sponsor-silver">
                     <div class="sponsor-badge">Silver</div>
                     <h4>Silver Sponsor</h4>
-                    <div class="sponsor-price">€5,000</div>
+                    <div class="sponsor-price">€3,000</div>
                     <ul class="sponsor-benefits">
                         <li><span class="benefit-check">✓</span> Dedicated sub-event</li>
                         <li><span class="benefit-check">✓</span> Visibility on marketing materials</li>
@@ -167,7 +160,7 @@
                 <div class="sponsor-card sponsor-bronze">
                     <div class="sponsor-badge">Bronze</div>
                     <h4>Bronze Sponsor</h4>
-                    <div class="sponsor-price">€2,500</div>
+                    <div class="sponsor-price">€1,000</div>
                     <ul class="sponsor-benefits">
                         <li><span class="benefit-check">✓</span> Visibility on all marketing materials (website, t-shirts, etc.)</li>
                     </ul>
@@ -220,7 +213,7 @@
                 <div class="team-member">
                     <img src="/api/placeholder/200/200" alt="Lauri Konbass">
                     <h3>Lauri Konbass</h3>
-                    <a href="#" class="social-link">
+                    <a href="https://www.linkedin.com/in/laurikoobas/" class="social-link">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
                         </svg>
@@ -231,7 +224,7 @@
                 <div class="team-member">
                     <img src="/api/placeholder/200/200" alt="Kirstel Saul">
                     <h3>Kirstel Saul</h3>
-                    <a href="#" class="social-link">
+                    <a href="https://www.linkedin.com/in/kristel-saul-26a3141a4/" class="social-link">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
                         </svg>
@@ -242,7 +235,7 @@
                 <div class="team-member">
                     <img src="/api/placeholder/200/200" alt="Pieter Jansen">
                     <h3>Pieter Jansen</h3>
-                    <a href="#" class="social-link">
+                    <a href="https://www.linkedin.com/in/pieter-jansen-6045b015/" class="social-link">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
                         </svg>
@@ -253,7 +246,7 @@
                 <div class="team-member">
                     <img src="/api/placeholder/200/200" alt="Nikita Strezhnev">
                     <h3>Nikita Strezhnev</h3>
-                    <a href="#" class="social-link">
+                    <a href="https://www.linkedin.com/in/nstrezhnev/" class="social-link">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
                         </svg>
@@ -264,7 +257,7 @@
                 <div class="team-member">
                     <img src="/api/placeholder/200/200" alt="Valdar Tammik">
                     <h3>Valdar Tammik</h3>
-                    <a href="#" class="social-link">
+                    <a href="https://www.linkedin.com/in/valdar-tammik-079a9220/" class="social-link">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
                         </svg>
@@ -286,7 +279,7 @@
                 <div class="team-member">
                     <img src="/api/placeholder/200/200" alt="Martin Petder">
                     <h3>Martin Petder</h3>
-                    <a href="#" class="social-link">
+                    <a href="https://www.linkedin.com/in/martinpetder/" class="social-link">
                         <svg style="width:24px;height:24px" viewBox="0 0 24 24" fill="currentColor">
                             <path d="M19 3a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h14m-.5 15.5v-5.3a3.26 3.26 0 0 0-3.26-3.26c-.85 0-1.84.52-2.32 1.3v-1.11h-2.79v8.37h2.79v-4.93c0-.77.62-1.4 1.39-1.4a1.4 1.4 0 0 1 1.4 1.4v4.93h2.79M6.88 8.56a1.68 1.68 0 0 0 1.68-1.68c0-.93-.75-1.69-1.68-1.69a1.69 1.69 0 0 0-1.69 1.69c0 .93.76 1.68 1.69 1.68m1.39 9.94v-8.37H5.5v8.37h2.77z"/>
                         </svg>
