--- a/index.html
+++ b/index.html
@@ -10,26 +10,31 @@
 <body>
     <header>
         <div class="container">
-            <!-- Added logo with the correct file name -->
-            <div class="logo-container">
-                <img src="images/Logo TDW.png" alt="Tallinn Data Week 25 Logo" class="logo">
-            </div>
             <h1>Tallinn Data Week 2025</h1>
         </div>
     </header>
     
     <!-- Navigation bar -->
     <div class="nav-container">
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#sponsors">Sponsors</a></li>
-                <li><a href="#venue">Venue</a></li>
-                <li><a href="#team">Team</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
+        <div class="nav-wrapper">
+            <!-- Logo moved here -->
+            <div class="nav-logo">
+                <a href="#home">
+                    <img src="images/logo/TDW-linkedin-company_profile_photo_v1.jpg" alt="Tallinn Data Week 25 Logo" class="logo">
+                </a>
+            </div>
+            
+            <nav>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#schedule">Schedule</a></li>
+                    <li><a href="#sponsors">Sponsors</a></li>
+                    <li><a href="#venue">Venue</a></li>
+                    <li><a href="#team">Team</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
     </div>
 
     <div id="home" class="hero">
