--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <header>
         <div class="container">
-            <h1>Tallinn Data Week 2025</h1>
+            <div class="header-logo-container">
+                <img src="images/logo/TDW-linkedin-company_profile_photo_v1.jpg" alt="Tallinn Data Week 2025 Logo" class="header-logo">
+            </div>
         </div>
     </header>
     
