--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="header-logo-container">
-                <img src="images/logo/TDW-linkedin-company_profile_photo_v1.jpg" alt="Tallinn Data Week 2025 Logo" class="header-logo">
+                <img src="images/logo/TDW-logo-multi-white.png" alt="Tallinn Data Week 2025 Logo" class="header-logo">
             </div>
         </div>
     </header>
