--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
                             </svg>
                         </button>
                         <div class="faq-answer">
-                            <p>T1Venue is very recently opened modern conference space in the huge T1 shopping mall in Tallinn, near the airport. The <a href="https://t1venue.ee/"></a>home page has some nice visuals.</p>
+                            <p>T1Venue is very recently opened modern conference space in the huge T1 shopping mall in Tallinn, near the airport. The <a href="https://t1venue.ee/en/avaleht/" target="_blank">home page</a> has some nice visuals.</p>
                         </div>
                     </div>
                     <div class="faq-item">
