Add image as slogan. Adjust font letter spacing and weight. Adjust nav bar.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <div class="header-logo-container">
-                <img src="images/logo/TDW-logo-multi-white.png" alt="Tallinn Data Week 2025 Logo" class="header-logo">
+                <img src="images/logo/TDW-logo-multi-white.png" alt="Tallinn Data Week 2025 Logo" class="header-logo" style="width: 30%; height: auto;">
             </div>
         </div>
     </header>
@@ -32,10 +32,10 @@
         </div>
     </div>
 
+    <!-- Slogan image -->
     <div id="home" class="hero">
-        <div class="container">
-            <h2>How to improve the lives of people working with data</h2>
-            <h3><u>When people are doing well, results follow</u></h3>
+        <div class="hero-slogan-container">
+            <img src="images/logo/TDW-linkedin-company_cover.jpg" alt="Tallinn Data Week 2025 Slogan" style="width: 100%; height: auto;">
         </div>
     </div>
 
