--- a/index.html
+++ b/index.html
@@ -36,14 +36,6 @@
     <div id="home" class="hero">
         <div class="hero-slogan-container">
             <img src="images/logo/TDW-linkedin-company_cover.jpg" alt="Tallinn Data Week 2025">
-            <div class="hero-cta">
-                <a href="https://fienta.com/tallinn-data-week-2025-opening-day?76825aa0c62331974c6eb89d1bdb66fb=" target="_blank" rel="noopener noreferrer" class="btn-primary">
-                    ✅ I'm in for Opening Day
-                </a>
-                <button class="btn-secondary" onclick="openUpdatesModal()">
-                    👉 Keep me posted
-                </button>
-            </div>
         </div>
     </div>
 
@@ -84,7 +76,23 @@
             <li><strong>Friday Evening:</strong> Celebrate and connect at our informal closing event in a local pub. Entry is free and refreshments will be available for purchase.</li>
           </ul>
         </div>
-      </section>
+        <div class="hero-cta">
+            <div class="cta-box">
+                <h4>I'm in for the Opening Day *</h4>
+                <a href="https://fienta.com/tallinn-data-week-2025-opening-day" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                    ✅ Get my free ticket
+                </a>
+                <h5>* Sub-event registration coming later</h5>
+            </div>
+            <div class="cta-divider">OR</div>
+            <div class="cta-box">
+                <h4>I'm not sure yet — keep me posted</h4>
+                <button class="btn-secondary" onclick="openUpdatesModal()">
+                    ✉️ Enter my email
+                </button>
+            </div>
+        </div>
+  </section>
     
     <!-- Schedule Section -->
     <section id="schedule">
@@ -534,7 +542,26 @@
             </div>
         </div>
     </section>
-    
+
+    <section id="bottom-cta">
+        <h3>Now that you've reached the end, here are the choices again:</h3>
+        <div class="hero-cta">
+            <div class="cta-box">
+                <h4>I'm in for the Opening Day *</h4>
+                <a href="https://fienta.com/tallinn-data-week-2025-opening-day" target="_blank" rel="noopener noreferrer" class="btn-primary">
+                    ✅ Get my free ticket
+                </a>
+                <h5>* Sub-event registration coming later</h5>
+            </div>
+            <div class="cta-divider">OR</div>
+            <div class="cta-box">
+                <h4>I'm not sure yet — keep me posted</h4>
+                <button class="btn-secondary" onclick="openUpdatesModal()">
+                    ✉️ Enter my email
+                </button>
+            </div>
+        </div>
+    </section>
     <!-- Contact Section -->
     <section id="contact">
         <div class="container">
