--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta name="description" content="Join us at Tallinn Data Week 2025 - A free event focusing on improving the lives of data professionals. Featuring keynotes, workshops, and networking opportunities.">
     <title>Tallinn Data Week 2025</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <link rel="shortcut icon" href="/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="shortcut icon" href="favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
 </head>
 <body>
     <header>
@@ -24,7 +24,10 @@
     <div class="nav-container">
         <div class="nav-wrapper">
             <nav>
-                <ul>
+                <button class="mobile-menu-toggle" aria-label="Toggle menu" aria-expanded="false">
+                    <span class="hamburger"></span>
+                </button>
+                <ul class="nav-menu">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#schedule">Schedule</a></li>
                     <li><a href="#sponsors">Sponsors</a></li>
